# MetPdf

./: .gitignore  LICENSE  README.md  generate_icon.py  gui.py  main.py  metepdf.spec  pyproject.toml  requirements.txt  universalpdf.spec
.claude/commands/: build.md  install.md
.github/workflows/: release.yml
converters/: __init__.py  base.py  docx_converter.py  image_converter.py  pdf_converter.py  txt_converter.py
core/: __init__.py  dispatcher.py  exceptions.py  service.py
utils/: __init__.py  file_utils.py
